public/bootstrap/less/trp3Chat.less
.trpChatContainer {
	padding-bottom: 75px;
}

.trpChatInputBox {
	display: inline-block;
	background-color: white;
/*	height: 58px;*/
	vertical-align: top;
	width: 404px;
	border-radius: 5px 5px 5px 5px;
	margin-left: 12px;
}


.trpChatInput, .trpChatInputBoxTextArea {
	display: inline-block;
	width: 100%;
	outline: none;
	.trpBodyMedium;
	padding-left: 5px;
	border: 0px;
	resize: none;
	margin: 1px;
	box-shadow: none;
	height: 49px;
}

.trpChatInputBoxTextArea {
  width: 394px;
}

.trpChatItem {
	display: inline-block;
	margin-bottom: 16px;
	display: block;
	clear: left;
}

.trpChatBox {
	background-color: white;
	display: inline-block;
	min-height: 24px;
	vertical-align: top;
	width: 380px;
	border-radius: 5px 5px 5px 5px;
  .trpBodyText;
	padding: 7px 12px;
	line-height: 150%;
	margin-left: 12px;
	color: #333;
}

.view .trpChatBox {
	-webkit-transition: background-color 0.5s linear;
  -moz-transition: background-color 0.5s linear;
  -o-transition: background-color 0.5s linear;
  transition: background-color 0.5s linear;
}

.view .trpChatFrom, .trpChatTime {
	-webkit-transition: color 0.5s linear;
  -moz-transition: color 0.5s linear;
  -o-transition: color 0.5s linear;
  transition: color 0.5s linear;
}

.view.unread .trpChatBox,
.view.reading .trpChatBox {
	background-color: #89e5b6;
}

.view.unread .trpChatFrom, .view.unread .trpChatTime,
.view.reading .trpChatFrom, .view.reading .trpChatTime {
	color: #6cb697;
}


.trpChatDetails{
  display: block;
  max-width: 400px;
  color: #D6D6D6;
  font-size: 12px;
  margin: 0;
  padding: 0;
}

.trpChatTime, .trpChatEdit, .trpChatReads {
	display: inline-block;
	float: right;
}

// by default, don't show the edit icon
.trpChatEdit {
  display: none;
}

// show the edit icon if the viewer canEdit or the message has been edited
.isViewers .trpChatEdit, .hasBeenEdited .trpChatEdit {
  display: inline-block;
}

// if the message has been edited always show the edit icon (not just on hover)
.hasBeenEdited .trpChatEdit {
  display: inline-block;
}

// by default, don't show the reads icon
.trpChatReads {
  display: none;
}

// show the reads icon if it has been read
.hasBeenRead .trpChatReads {
  display: block;
}

// show the edit and read icons only when hovered over.
// hide the edit and read buttons by default, so they can be shown on hover.
.trpChatEdit, .trpChatReads {
  visibility: hidden;
}

.trpChatBox:hover > .trpChatDetails > .trpChatEdit,
.trpChatBox:hover > .trpChatDetails > .trpChatReads {
  visibility: visible;
}

.isOld .trpChatEdit {
  display: none;
}

.trpCompactView .trpChatReads {
  display: none;
}

// gray out the edit and read icons by default
.trpChatEdit, .trpChatReads {
  opacity: 0.2;
  padding: 2px 4px 0 0;
  height: 16px;
}

// if the viewer can edit the message, dont gray it out
.canEdit .trpChatEdit:hover {
  opacity: 1;
  transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

/*
// hide the timeago when hovered
:hover > .trpChatTime {
  display: none;
}
*/

.trpChatFrom {
	display: inline-block;
}

.trpChatText {
	margin: 0;
	padding: 0;
  word-wrap: break-word;
  max-width: 370px;
}

